Add interface for AuthController
Also update documentation for the API
